# alt

./: README.md  install.sh  pyproject.toml
commands/: alt.md
src/alt/: __main__.py  cli.py  config.py  credentials.py  keychain.py  paths.py  platform.py  process.py  profile.py  switcher.py  usage.py
