[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt"
version = "1.1.0"
description = "Switch between multiple Claude Code accounts and track live spend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
alt = "alt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alt"]
